<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Randroid</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="lottery_button">Click this Image Button to start Lottery!</string>
    <string name="add_lottery">Add Lottery</string>
    <string name="lottery_info">Lottery Info:</string>
    <string name="lottery_title_hint">Title</string>
    <string name="lottery_desc_hint">Lottery Description</string>
    <string name="lottery_tickets">Add/Remove Tickets to the Lottery:</string>
    <string name="add_ticket">Add Ticket</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="lottery_added_toast">&quot;A new lottery has been added.&quot;</string>
    <string name="ticket_name">Ticket Name:</string>
    <string name="add_ticket_dlg_title">Add New Ticket</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="edit_del_dlg_title">Select and action</string>

</resources>